# code-sprawl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/code_sprawl/: __init__.py  main.py  models.py  scanner.py
src/code_sprawl/ui/: __init__.py  app.py  styles.tcss  widgets.py
tests/: test_app_import.py  test_app_logic.py  test_scanner.py  test_widgets.py
