[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-sprawl"
version = "0.1.0"
description = "Fun neon TUI that visualizes a repository like a code city"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "You" }]
dependencies = [
  "textual>=0.67.0",
  "pydriller>=2.6",
  "radon>=6.0.1",
  "pathspec>=0.12.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "build>=1.2.2",
  "mypy>=1.12.0",
  "pip-audit>=2.7.3",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.1",
  "twine>=5.1.1",
]

[project.scripts]
code-sprawl = "code_sprawl.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q --cov=src/code_sprawl --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/code_sprawl"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 55

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
